// Vitest Snapshot v1

exports[`"get-logout" handler > calls "cookie.serialize" with correct args 1`] = `
[
  [
    "session",
    "",
    {
      "expires": 2022-01-01T00:00:00.000Z,
    },
  ],
]
`;

exports[`"get-logout" handler > resolves with a correct value 1`] = `
{
  "cookies": [
    "dummyCookie",
  ],
  "headers": {
    "location": "https://dummyauthdomain/logout?client_id=dummyClientId&logout_uri=dummyLogoutCallbackUrl",
  },
  "statusCode": 302,
}
`;

exports[`"get-logout" handler > when "authDomain" env var is missing > calls "errorResponse" with correct args 1`] = `
[
  [
    "WKSoIIT1Ds",
  ],
]
`;

exports[`"get-logout" handler > when "authDomain" env var is missing > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-logout" handler > when "clientId" env var is missing > calls "errorResponse" with correct args 1`] = `
[
  [
    "WKSoIIT1Ds",
  ],
]
`;

exports[`"get-logout" handler > when "clientId" env var is missing > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-logout" handler > when "envName" env var is missing > calls "errorResponse" with correct args 1`] = `
[
  [
    "WKSoIIT1Ds",
  ],
]
`;

exports[`"get-logout" handler > when "envName" env var is missing > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-logout" handler > when "envName" is "personal" > when "referer" header is missing > calls "errorResponse" with correct args 1`] = `
[
  [
    "GkjK-mpVvL",
  ],
]
`;

exports[`"get-logout" handler > when "envName" is "personal" > when "referer" header is missing > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-logout" handler > when "envName" is "personal" > when "referer" is from localhost > resolves with a correct value 1`] = `
{
  "cookies": [
    "dummyCookie",
  ],
  "headers": {
    "location": "https://dummyauthdomain/logout?client_id=dummyClientId&logout_uri=dummyLogoutCallbackLocalhostUrl",
  },
  "statusCode": 302,
}
`;

exports[`"get-logout" handler > when "logoutCallbackLocalhostUrl" env var is missing > calls "errorResponse" with correct args 1`] = `
[
  [
    "WKSoIIT1Ds",
  ],
]
`;

exports[`"get-logout" handler > when "logoutCallbackLocalhostUrl" env var is missing > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-logout" handler > when "logoutCallbackUrl" env var is missing > calls "errorResponse" with correct args 1`] = `
[
  [
    "WKSoIIT1Ds",
  ],
]
`;

exports[`"get-logout" handler > when "logoutCallbackUrl" env var is missing > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-logout" handler > when "parseSessionCookie" returns a value > calls "deleteSession" with correct args 1`] = `
[
  [
    "dummySessionId",
  ],
]
`;

exports[`"get-logout" handler > when "parseSessionCookie" returns a value > calls "revokeOauthTokens" with correct args 1`] = `
[
  [
    {
      "authDomain": "dummyAuthDomain",
      "clientId": "dummyClientId",
      "refreshToken": "dummyRefreshToken",
    },
  ],
]
`;

exports[`"get-logout" handler > when "parseSessionCookie" returns a value > when "deleteSession" rejects > calls "errorResponse" with correct args 1`] = `
[
  [
    "If_8Sr_Y7L",
    {
      "error": "dummyDeleteSessionRejectedValue",
    },
  ],
]
`;

exports[`"get-logout" handler > when "parseSessionCookie" returns a value > when "deleteSession" rejects > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-logout" handler > when "parseSessionCookie" returns a value > when "revokeOauthTokens" rejects > calls "errorResponse" with correct args 1`] = `
[
  [
    "-8-K2WmZuo",
    {
      "error": "dummyRevokeOauthTokensRejectedValue",
    },
  ],
]
`;

exports[`"get-logout" handler > when "parseSessionCookie" returns a value > when "revokeOauthTokens" rejects > resolves with a correct value 1`] = `"dummyerrorResponse"`;
